[tool.poetry]
name = "chord-drawer"
version = "0.1.0"
description = "A library for drawing guitar chord diagrams."
authors = ["Jack Zheng <j20001020@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"